--- a/snow.html
+++ b/snow.html
@@ -120,14 +120,14 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="enter-email">Email Address</label>
-                            <input type="email" class="form-control" id="enter-email" aria-describedby="emailHelp"
+                            <input type="email" name="emailaddress" class="form-control" id="enter-email" aria-describedby="emailHelp"
                                 placeholder="Please enter your email address..." required>
                             <small id="emailHelp" class="form-text text-muted">You need this to register for our
                                 platform</small>
                         </div>
                         <div class="form-group">
                             <label for="email-confirm">Please Confirm Your Email address</label>
-                            <input type="email" class="form-control" id="email-confirm" aria-describedby="emailHelp"
+                            <input type="email" name="emailaddressConfirmed" class="form-control" id="email-confirm" aria-describedby="emailHelp"
                                 placeholder="Please confirm your email address..." required>
                         </div>
                         <div class="form-group">
@@ -141,7 +141,7 @@
                                 placeholder="Please re-enter your password..." required>
                         </div>
                         <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="checkbox">
+                            <input type="checkbox" name="checkBox" class="form-check-input" id="checkbox">
                             <label class="form-check-label" for="checkbox">I wish to receive emails informing me of new
                                 destinations.</label>
                         </div>
