--- a/index.html
+++ b/index.html
@@ -9,17 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" defer></script>
-    <script type="text/javascript" defer>
-        (function () {
-            emailjs.init("user_uZfhju5blSucDKMUF6PGS");
-        })();
-    </script>
-    <script type="text/javascript" src="assets/js/script.js" defer></script>
     <title>Wanderers Way</title>
 </head>
 
-<body>
+<body onload="loadWelcome()">
 
     <!-- Alert -->
 
@@ -165,6 +158,13 @@
             </form>
         </div>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript" defer>
+        (function () {
+            emailjs.init("user_uZfhju5blSucDKMUF6PGS");
+        })();
+    </script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="assets/js/sendEmail.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
