--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_uZfhju5blSucDKMUF6PGS");
+        })();
+    </script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script src="assets/js/sendEmail.js"></script>
     <title>Wanderers Way</title>
 </head>
 
@@ -161,13 +169,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("user_uZfhju5blSucDKMUF6PGS");
-        })();
-    </script>
-    <script src="assets/js/sendEmail.js"></script>
-    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 
 </html>
