--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,9 @@
                     <a class="nav-link" href="snow.html">Snow</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="destination.html">Destination</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link current" href="contact.html">Contact Us</a>
                 </li>
             </ul>
