--- a/destination.html
+++ b/destination.html
@@ -51,6 +51,9 @@
                     <a class="nav-link" href="snow.html">Snow</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="destination.html">Destination</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
             </ul>
@@ -147,10 +150,17 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_uZfhju5blSucDKMUF6PGS");
+        })();
+    </script>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
