--- a/sun.html
+++ b/sun.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body onload="showSunLocations(), destinationChosen()">
+<body onload="showSunLocations(), destinationChosen('sun')">
 
     <!-- Alert -->
 
