--- a/sun.html
+++ b/sun.html
@@ -149,6 +149,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript" src="assets/js/data.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript">
         (function () {
