--- a/destination.html
+++ b/destination.html
@@ -45,10 +45,7 @@
                     <a class="nav-link" href="index.html">Home<span class="sr-only">Home</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sun.html">Sun</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="snow.html">Snow</a>
+                    <a class="nav-link" href="destinations.html">Destinations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link current" href="destination.html">Destination</a>
